handle number fixed

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
-doc_id: 'LDM-463'
-doc_title: 'LSST DM Project Management Tools'
+doc_id: 'LDM-465'
+doc_title: 'LSST DM Project Management and Tools'
 copyright: '2016, AURA/LSST'
 authors:
     - Jacek Becla
