--- a/metadata.yaml
+++ b/metadata.yaml
@@ -11,6 +11,6 @@ authors:
     - John Swinbank
     - Xiuqin Wu
 # Current document version; defaults to git commit date if commented
-# last_revised: '2016-03-06'
+last_revised: '2017-02-15'
 # Uncomment to set a version name; defaults to git branch
 # version: '0.1.dev'
